--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Josué García Yza
+email: osueboy@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Writing about web's new technologies.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://osueboy.github.io" # the base hostname & protocol for your site
 twitter_username: osueboy
